# oremda

./: .codespellrc  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pyrightconfig.json  setup.py
.github/workflows/: pre-commit.yml  publish.yml
api/: pyproject.toml
api/oremda/api/: __init__.py  operator.py
cli/: pyproject.toml
cli/oremda/cli/: __init__.py  pull.py  run.py
client/: .gitignore  build_client_for_package.sh  package-lock.json  package.json  pyproject.toml
client/oremda/client/: __init__.py
client/public/: index.html  pipeline_1d.json  pipeline_2d.json  pipeline_peak.json
client/src/: App.css  App.tsx
client/src/app/: store.ts
client/src/client/: index.ts
client/src/components/: display-1d.tsx  display-2d.tsx  display-remote.tsx  displays-panel.tsx  new-pipeline.tsx  operator-palette.tsx  operators-panel.tsx  pipeline-graph.tsx  pipelines-panel.tsx  status-bar.tsx
client/src/components/pipeline/: factories.tsx  index.tsx  models.ts  widgets.tsx
client/src/features/displays/: index.ts
client/src/features/notifications/: index.ts
client/src/features/operators/: api.ts  index.ts
client/src/features/pipelines/: api.ts  index.ts
client/src/features/session/: api.ts  index.ts
client/src/features/websocket/: index.ts
client/src/notifications/: index.ts
client/src/types/: operator.ts  pipeline.ts  session.ts
client/src/utils/: index.ts
client/src/websocket/: index.ts
core/: pyproject.toml
core/oremda/: constants.py  plasma_client.py
core/oremda/clients/: utils.py
core/oremda/clients/base/: image.py
core/oremda/clients/docker/: client.py  image.py
core/oremda/clients/singularity/: image.py
core/oremda/display/: matplotlib.py
core/oremda/event_loops/mpi/: event_loop.py  non_root_event_loop.py
core/oremda/messengers/: __init__.py
core/oremda/messengers/base/: __init__.py  messenger.py
core/oremda/messengers/mpi/: messenger.py
core/oremda/messengers/mpi/implementations/: thread_multiple.py
core/oremda/messengers/mqp/: messenger.py  utils.py
core/oremda/pipeline/: operator.py
core/oremda/typing/: __init__.py
core/oremda/utils/: asyncio.py  plasma.py  singleton.py  types.py
docker/oremda/: Dockerfile  build.sh
docker/oremda_mpi/: Dockerfile  build.sh
docs/: container-interface.md
engine/: pyproject.toml
engine/oremda/engine/: __init__.py  cli.py  config.py  context.py
engine/oremda/engine/rpc/: client.py
engine/oremda/engine/rpc/displays/: __init__.py
engine/oremda/engine/rpc/messages/: __init__.py
examples/basic/: .gitignore  bootstrap.py  build.sh  docker_test.sh  requirements.txt  run.sh  runner.py  singularity_run.sh  singularity_test.sh
examples/basic/add/: run.py
examples/basic/eels_background/: Dockerfile  pipeline.json  run.py  run_json.py
examples/basic/loader/: Dockerfile  pipeline.json  run.py
examples/basic/minus_three/: run.py
examples/basic/multiply/: run.py
examples/basic/plasma/: Dockerfile  run.sh
examples/basic/runner/: Dockerfile  pipeline.json  pipeline_singularity.json  (+1 more)
examples/containers/: generic.py
examples/mpi/: build.sh  local_run.sh  operator_config.json  pipeline.json  run.py  run.sh
examples/operators/: build.sh
examples/volume_renderer/: build.sh  run.sh
meta/: pyproject.toml
meta/oremda/meta/: cli.py
operators/: .gitignore  build.sh
operators/background_fit/: build.sh  run.py
operators/crop2d/: run.py
operators/data_container/: Dockerfile  build.sh  data.tiff  run.py
operators/difference/: build.sh  run.py
operators/diffractogram/: Dockerfile  run.py
operators/fft2d/: Dockerfile  build.sh  run.py
operators/gaussian_blur/: Dockerfile  run.py
operators/histograms/: run.py
operators/http_reader/: Dockerfile  build.sh  run.py
operators/lattice_find/: Dockerfile  run.py
operators/ncem_reader/: Dockerfile  run.py
operators/ncem_reader_eels/: build.sh  run.py
operators/peak_base/: build.sh
operators/peak_find/: Dockerfile  build.sh  run.py
operators/peak_opt/: Dockerfile  build.sh  run.py
operators/picture/: Dockerfile  build.sh  run.py
operators/plot/: build.sh  run.py
operators/print/: run.py
operators/scatter/: Dockerfile  build.sh  run.py
operators/subtract/: build.sh  run.py
operators/tiff_reader/: Dockerfile  build.sh  run.py
operators/tile/: Dockerfile  build.sh  run.py
operators/unit_cell/: run.py
operators/vector/: run.py
oremda/: __init__.py  constants.py  display.py  operator.py  pipeline.py  plasma_client.py  registry.py  shared_resources.py  source.py
oremda/cli/: __init__.py  engine.py  pull.py  run.py  runner.py
oremda/clients/: __init__.py  base.py  odocker.py  singularity.py  utils.py
oremda/display/: __init__.py  matplotlib.py
oremda/event_loops/: __init__.py  mpi_event_loop.py
oremda/messengers/: __init__.py
oremda/models/: __init__.py
oremda/pipeline/: __init__.py  operator.py
oremda/typing/: __init__.py
oremda/utils/: concurrency.py  id.py  mpi.py  plasma.py  singleton.py  types.py
scripts/docker/: Dockerfile  example_description.json  json_to_docker_labels.py
scripts/poetry/: install_all.sh  link.sh  packages.sh  publish.sh  publish_all.sh  unlink.sh
scripts/singularity/: docker_to_singularity.py
scripts/validation/: validate_labels.py
server/: Dockerfile  build.sh  env.sh  index.html  main.py  pipeline.json  pyproject.toml  requirements.txt  run.sh
server/oremda/server/: __init__.py  cli.py  context.py  index.html  main.py  utils.py
server/oremda/server/api/api_v1/: api.py
server/oremda/server/api/api_v1/endpoints/: operators.py  pipelines.py  rpc.py  sessions.py  websockets.py
server/server/: context.py  index.html  main.py  pipeline.json  pipeline_1d.json  pipeline_2d.json
server/server/api/api_v1/: api.py
server/server/api/api_v1/endpoints/: operators.py  pipelines.py  rpc.py  sessions.py  websockets.py
server/server/displays/: __init__.py
server/server/messages/: __init__.py
server/server/models/: __init__.py
server/server/observer/: __init__.py
server/server/typing/: __init__.py
(+111 files in other folders)
