[tool.poetry]
name = "oremda-api"
version = "0.1.0"
description = ""
authors = ["Chris Harris <chris.harris@kitware.com>"]
readme = "README.md"
packages = [{include = "oremda"}]

[tool.poetry.dependencies]
python = "^3.9"
oremda-core = "^0.1.1"


[tool.poetry.dev-dependencies]
pyright = "^0.0.13"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
