[tool.poetry]
name = "oremda-api"
version = "0.1.0"
description = ""
authors = ["Chris Harris <chris.harris@kitware.com>"]
readme = "README.md"
packages = [{include = "oremda"}]

[tool.poetry.dependencies]
python = "^3.8"
oremda-core = "^0.1.3"


[tool.poetry.dev-dependencies]
pyright = "^0.0.13"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[[tool.poetry.source]]
name = "public pypi"
url = "https://pypi.python.org/simple"

[[tool.poetry.source]]
name = "test pypi"
url = "https://test.pypi.org/simple/"