[tool.poetry]
name = "oremda-cli"
version = "0.0.2"
description = ""
authors = ["Alessandro Genova <alessandro.genova@kitware.com>", "Chris Harris <chris.harris@kitware.com>", "Patrick Avery <patrick.avery@kitware.com>"]
readme = "README.md"
license = "BSD-3-Clause"
packages = [{include = "oremda"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
click-plugins = "^1.1.1"
docker = "^5.0.3"
spython = "^0.1.17"
requests = "^2.27.1"
coloredlogs = "^15.0.1"
oremda-core = "^0.0.2"

[tool.poetry.dev-dependencies]
pyright = "^0.0.13"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
oremda = 'oremda.cli:main'

[tool.poetry.plugins."oremda.cli.plugin"]
run = "oremda.cli.run:main"
pull = "oremda.cli.pull:main"
