[tool.poetry]
name = "oremda-client"
version = "0.0.1"
description = ""
authors = ["Alessandro Genova <alessandro.genova@kitware.com>", "Chris Harris <chris.harris@kitware.com>", "Patrick Avery <patrick.avery@kitware.com>"]
readme = "README.md"
license = "BSD-3-Clause"
packages = [{include = "oremda"}]
include = ["oremda/client/build/**/*"]

[tool.poetry.dependencies]
python = "^3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
