[tool.poetry]
name = "oremda-core"
version = "0.0.1"
description = ""
authors = ["Alessandro Genova <alessandro.genova@kitware.com>", "Chris Harris <chris.harris@kitware.com>", "Patrick Avery <patrick.avery@kitware.com>"]
readme = "README.md"
license = "BSD-3-Clause"
packages = [{include = "oremda"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.1"
pyarrow = "^6.0.1"
posix-ipc = "^1.0.5"
matplotlib = "^3.5.1"
pydantic = "^1.9.0"
docker = "^5.0.3"
spython = "^0.1.18"
fastapi = "^0.73.0"

[tool.poetry.dev-dependencies]
pyright = "^0.0.13"
mpi4py = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
