[tool.poetry]
name = "oremda-engine"
version = "0.1.5"
description = ""
authors = ["Chris Harris <chris.harris@kitware.com>"]
readme = "README.md"
packages = [{include = "oremda"}]

[tool.poetry.dependencies]
python = "^3.8"
oremda-cli = "^0.1.3"
oremda-core = "^0.1.3"
fastapi-websocket-rpc = "^0.1.21"
msgpack = "^1.0.3"

[tool.poetry.dev-dependencies]
pyright = "^0.0.13"

[tool.poetry.plugins."oremda.cli.plugin"]
engine = "oremda.engine.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "public pypi"
url = "https://pypi.python.org/simple"

[[tool.poetry.source]]
name = "test pypi"
url = "https://test.pypi.org/simple/"