[tool.poetry]
name = "oremda-engine"
version = "0.0.4"
description = ""
authors = ["Alessandro Genova <alessandro.genova@kitware.com>", "Chris Harris <chris.harris@kitware.com>", "Patrick Avery <patrick.avery@kitware.com>"]
readme = "README.md"
license = "BSD-3-Clause"
packages = [{include = "oremda"}]

[tool.poetry.dependencies]
python = "^3.8"
oremda-cli = "^0.0.2"
oremda-core = "^0.0.2"
fastapi-websocket-rpc = "^0.1.21"
msgpack = "^1.0.3"

[tool.poetry.dev-dependencies]
pyright = "^0.0.13"

[tool.poetry.plugins."oremda.cli.plugin"]
engine = "oremda.engine.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"