[tool.poetry]
name = "oremda"
version = "0.1.0"
description = ""
authors = ["Chris Harris <chris.harris@kitware.com>"]
readme = "README.md"
packages = [{include = "oremda"}]

[tool.poetry.dependencies]
python = "^3.8"
oremda-server = "^0.1.6"
oremda-client = "^0.1.1"
oremda-engine = "^0.1.5"
oremda-cli = "^0.1.2"
oremda-core = "^0.1.3"


[tool.poetry.plugins."oremda.cli.plugin"]
start = "oremda.meta.cli:main"


[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^21.12b0"
pyright = "^0.0.13"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "public pypi"
url = "https://pypi.python.org/simple"

[[tool.poetry.source]]
name = "test pypi"
url = "https://test.pypi.org/simple/"